.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_lazy.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_lazy.ts(20,3): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA`. effect(missingEffectContext)


==== /.src/missingEffectContext_lazy.ts (1 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    
    class ServiceA extends Effect.Service<ServiceA>()("ServiceA", {
      succeed: { a: 1 }
    }) {}
    
    export const useSpan: {
      <A, E, R>(evaluate: () => Effect.Effect<A, E, R>): Effect.Effect<A, E, R>
    } = <A, E, R>(...args: [evaluate: () => Effect.Effect<A, E, R>]): Effect.Effect<A, E, R> => {
      const evaluate: () => Effect.Effect<A, E, R> = args[args.length - 1]
      return Effect.onExit(evaluate(), () => Effect.void)
    }
    
    export const useSpan_invalid: {
      <A, E, R>(evaluate: () => Effect.Effect<A, E, R>): Effect.Effect<A, E, R>
    } = <A, E, R>(...args: [evaluate: () => Effect.Effect<A, E, R>]): Effect.Effect<A, E, R> => {
      const evaluate: () => Effect.Effect<A, E, R | ServiceA> = args[args.length - 1]
      // @ts-expect-error
      return Effect.onExit(evaluate(), () => Effect.void)
      ~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA`. effect(missingEffectContext)
    }
    
